# celestial-mechanic-solvers

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: FindMPFR.cmake
demos/: newton_fractal.cpp  plot_newton_fractal.py
lib/: adams.cpp  adams.hpp  adams_extrapolation_solver.cpp  adams_extrapolation_solver.hpp  adams_interpolation_solver.cpp  adams_interpolation_solver.hpp  adams_iterative_predictor_corrector_solver.cpp  adams_iterative_predictor_corrector_solver.hpp  adams_mpfr.cpp  adams_mpfr.hpp  adams_predictor_corrector_solver.cpp  adams_predictor_corrector_solver.hpp  boole_integrator.cpp  boole_intergrator.hpp  full_pivot_gauss_solver.cpp  full_pivot_gauss_solver.hpp  hermite_solver.cpp  hermite_solver.hpp  integrator_interface.hpp  jacoby_matrix_evaluator_interface.hpp  jacoby_matrix_evaluators.cpp  jacoby_matrix_evaluators.hpp  matrix_solver_interface.hpp  nbody_solver_interface.hpp  newton_root_finder.cpp  newton_root_finder.hpp  quad_integrator.cpp  quad_integrator.hpp  rk.cpp  rk.hpp  rk4_solver.cpp  rk4_solver.hpp  root_finder_interface.hpp  simple_jacoby_matrix_evaluator.cpp  simple_jacoby_matrix_evaluator.hpp  simpson_integrator.cpp  simpson_integrator.hpp  solver_interface.hpp  types.hpp  utils.cpp  (+1 more)
slides/: celmech.tex
slides-adams-extrapolation/: celmech.bib  celmech.tex
slides-hermite/: .gitignore  celmech.tex
slides-predictor-corrector/: .gitignore copy  celmech.tex
src/: hermite_2_body.cpp  hermite_4_body.cpp  main.cpp  solver_2_body.cpp  solver_n_body.cpp
tests/: matrix_solver_test.cpp  root_finder_test.cpp
utils/: plot.py
